More refactoring for consistency
HuskySortBenchmark: now we do raw and normalized I
ShellSort: implemented properly;
SortBenchmark: eliminated this class;
SorterBenchmark: refined formatting for times;